--- a/react-spa-test/public/index.html
+++ b/react-spa-test/public/index.html
@@ -12,6 +12,8 @@
     <meta name="keywords" content="weather, погода, news, новости">
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Weather App</title>
   </head>
   <body>
